--- a/setup/nginx/limbtips.conf
+++ b/setup/nginx/limbtips.conf
@@ -8,3 +8,14 @@ server {
         proxy_pass http://localhost:5000/;
     }
 }
+
+server {
+    listen 80;
+    listen [::]:80;
+
+    server_name www.limb.tips;
+
+    location / {
+        proxy_pass http://localhost:5000/;
+    }
+}
